# latreutes

./: .eslintrc.js  .gitignore  README.md  config-overrides.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
.github/workflows/: build-tauri-app-arm.yml  build-tauri-app.yml  release-tauri-app.yml
public/: global.css
src/: App.css  App.svelte  App.tsx  bulma-dark.scss  index.tsx  scss-entrypoint.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: dns.rs  main.rs
src/app/: MainWindow.svelte  NavLink.svelte  Navbar.svelte  navbar.tsx  theming.tsx  window.ts
src/app/home/: ApiInfo.svelte  AuthInfo.svelte  BrowserRunError.svelte  HomePage.svelte  NodeInfo.svelte  WelcomeInfo.svelte
src/app/main/: error-page.tsx  home-page.tsx  landing-page.tsx
src/dns/: lookup.ts
src/shared/: config.ts  dns.ts  layout.tsx  os.ts  shell.ts  transitions.ts
src/shared/modals/: DialogOverlay.svelte  DialogOverlayInner.svelte  DialogPortal.svelte  LockScroll.svelte  TrapFocus.svelte  TrapScreenReader.svelte
src/shared/navigation/: NavLink.svelte
src/styles/: bulma-dark.scss  bulma-light.scss  colors.scss  components.scss  layout.scss  theme-dark.scss  theme-light.scss  theme.scss  typography.scss
src/styles/app/: layout.vars.scss  theme-overrides.scss
src/types/: icon.d.ts
src/zerotier/: api.tsx  auth.tsx  config.ts  networks.tsx  node.tsx  peers.tsx  service.tsx
src/zerotier/client/: network.ts  networks.ts  node.ts  peer.ts  peers.ts  service.ts
src/zerotier/networks/: AdvancedDetails.svelte  BasicDetails.svelte  JoinDialog.svelte  JoinForm.svelte  NetworkId.svelte  NetworkInfo.svelte  NetworkName.svelte  NetworksPage.svelte  Settings.svelte  StatusTags.svelte  dns.ts  index.ts  index.tsx  joining.tsx  network.tsx  networks.tsx  service.ts
src/zerotier/peers/: PathDetails.svelte  PathsDetails.svelte  (+3 more)
(+17 files in other folders)
