[package]
name = "latreutes"
version = "0.1.0"
description = "Desktop application for browsing and connecting to ZeroTier and Sargassum networks"
authors = [ "Ethan Li" ]
license = "Apache-2.0 OR BlueOak-1.0.0"
repository = "https://github.com/prakashlab/latreutes"
default-run = "latreutes"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["fs-all", "fs-read-text-file", "http-all", "http-request", "path-all", "shell-all"] }
trust-dns-resolver = { version = "0.20.3", features = [ "dns-over-rustls" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
