[package]
name = "latreutes"
version = "0.2.1"
description = "Desktop application for browsing and connecting to ZeroTier and Sargassum networks"
authors = [ "Ethan Li" ]
license = "Apache-2.0 OR BlueOak-1.0.0"
repository = "https://github.com/prakashlab/latreutes"
default-run = "latreutes"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.4", features = ["fs-all", "http-all", "os-all", "path-all", "shell-all"] }
trust-dns-resolver = { version = "0.21.1", features = [ "dns-over-rustls" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
